# CO2

./: .gitignore  Doxyfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.dox  info.txt  mainpage.dox  modules.dox
doxygen_out/html/: ____init_____8py.html  annotated.html  annotated_dup.js  architecture.html  architecture_8dox.html  classengine_1_1_ocr_result-members.html  classengine_1_1_ocr_result.html  classengine_1_1_ocr_result.js  classengine_1_1_ocr_result__coll__graph.map  classes.html  classmodels_1_1_item-members.html  classmodels_1_1_item.html  classmodels_1_1_item.js  classmodels_1_1_item__coll__graph.map  classmodels_1_1_item__coll__graph.md5  classmodels_1_1_merchant-members.html  classmodels_1_1_merchant.html  classmodels_1_1_merchant.js  classmodels_1_1_merchant__coll__graph.md5  classmodels_1_1_merchant__inherit__graph.map  classmodels_1_1_ocr_info-members.html  classmodels_1_1_ocr_info.html  classmodels_1_1_ocr_info.js  classmodels_1_1_ocr_info__coll__graph.md5  classmodels_1_1_ocr_info__inherit__graph.map  classmodels_1_1_quality-members.html  classmodels_1_1_quality.html  classmodels_1_1_quality.js  classmodels_1_1_quality__inherit__graph.map  classmodels_1_1_quality__inherit__graph.md5  classmodels_1_1_receipt_contract_v1-members.html  classmodels_1_1_receipt_contract_v1.html  classmodels_1_1_receipt_contract_v1.js  classmodels_1_1_receipt_contract_v1__coll__graph.map  classmodels_1_1_receipt_contract_v1__coll__graph.md5  (+114 more)
scripts/: run_api.ps1  run_api.sh
tests/: test_parsing.py  test_repository.py
(+155 files in other folders)
