[project]
name = "scontrini"
version = "0.1.0"
description = "OCR e parsing di scontrini con persistenza SQLite e API locale"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "opencv-python>=4.10",
  "numpy>=2.0",
  "pillow>=10.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pytesseract>=0.3.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
scontrini = "scontrini.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
